check the changes removing name

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your Prasanth, It is a new application .
+            Hi! Here is your new application .
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
